--- a/.github/workflows/devops-starter-workflow.yml
+++ b/.github/workflows/devops-starter-workflow.yml
@@ -19,23 +19,33 @@ jobs:
     name: Build and Run tests
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Python ${{ env.PYTHON_VERSION }}
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
       with:
-        python-version: ${{ env.PYTHON_VERSION }}
+        python-version: '3.8'
 
     - name: Install Dependancies
       continue-on-error: false
       run: |
         pip install -r Application/requirements.txt
-
-    - name: Pytest
-      continue-on-error: false
-      run: |
-        mkdir testresults
-        pip install pytest && pytest Tests/unit_tests --junitxml=./testresults/test-results.xml && pip install pycmd && py.cleanup Tests/
-
+  
+   # - name: Pytest
+   #   continue-on-error: false
+   #   run: |
+   #     mkdir testresults
+   #     pip install pytest
+   #     pip install pytest-cov
+   #     pytest --cov=./ --cov-config=.coveragerc --cov-report term-missing Tests/unit_tests --junitxml=./testresults/test-results.xml
+   #     pip install pycmd
+   #     py.cleanup Tests/
+   
+   # - uses: actions/checkout@v2
+   #   with:
+   #     fetch-depth: 0
+   # - uses: sonarsource/sonarqube-scan-action@master
+   #   env:
+   #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        
     # Uploading unit test results to artifact store
     - name: Upload unit test results to Artifact
       continue-on-error: false
@@ -55,12 +65,10 @@ jobs:
         mkdir buildartifacts
         mkdir testartifacts
         mkdir deploymenttemplates
-
     # Archive build artifact
     - name: Archive Application
       run: |
        zip -qq -r ./buildartifacts/Application.zip ./Application
-
     # Uploading application to artifact store
     - name: Upload Application to Build Artifact
       continue-on-error: false
@@ -73,7 +81,6 @@ jobs:
     - name: Archive ArmTemplates
       run: |
         zip -qq -r ./deploymenttemplates/ArmTemplates.zip ./ArmTemplates
-
     # Uploading Arm Template to artifact store
     - name: Upload Arm templates to Artifact
       continue-on-error: false
@@ -81,6 +88,57 @@ jobs:
       with:
         name: deploymenttemplates
         path: deploymenttemplates
+
+  Deploy:
+    name: Deploy to azure web app
+    needs: Build
+    runs-on: ubuntu-latest
+    steps:
+    # Downloading build artifact
+    - name: Download Build Artifact
+      uses: actions/download-artifact@v2
+      continue-on-error: false
+      with:
+        name: buildartifacts
+        path: buildartifacts
+
+    # Unzipping build artifacts
+    - name: Unzipping Build Artifact
+      run: |
+        unzip -qq ./buildartifacts/Application.zip -d .
+  # Downloading Arm Template
+    - name: Download Arm Template
+      uses: actions/download-artifact@v2
+      continue-on-error: false
+      with:
+        name: deploymenttemplates
+        path: deploymenttemplates
+
+    # Unzipping Arm Template directory
+    - name: Unzipping ARM template
+      run: |
+       unzip -qq ./deploymenttemplates/ArmTemplates.zip -d .
+    # Azure Login
+    - name: Azure Login
+      uses: azure/login@v1
+      continue-on-error: false
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    # Deploy ARM Template
+    - name: Deploy ARM Template
+      uses: azure/CLI@v1
+      continue-on-error: false
+      with:
+        inlineScript: |
+          az group create --name "${{ env.RESOURCEGROUPNAME }}" --location "${{ env.LOCATION }}"
+          az deployment group create --resource-group "${{ env.RESOURCEGROUPNAME }}" --template-file ./ArmTemplates/linux-python-webapp-template.json --parameters webAppName="${{ env.AZURE_WEBAPP_NAME }}" hostingPlanName="${{ env.HOSTINGPLANNAME }}" appInsightsLocation="${{ env.APPINSIGHTLOCATION }}" sku="${{ env.SKU }}"
+    # Deploy web app
+    - name: 'Deploy to Azure WebApp'
+      uses: azure/webapps-deploy@v2
+      with: 
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
   Deploy:
     name: Deploy to azure web app
