--- a/.github/workflows/devops-starter-workflow.yml
+++ b/.github/workflows/devops-starter-workflow.yml
@@ -30,15 +30,15 @@ jobs:
       run: |
         pip install -r Application/requirements.txt
   
-    - name: Pytest
-      continue-on-error: false
-      run: |
-        mkdir testresults
-        pip install pytest
-        pip install pytest-cov
-        pytest --cov=./ --cov-config=.coveragerc --cov-report term-missing Tests/unit_tests --junitxml=./testresults/test-results.xml
-        pip install pycmd
-        py.cleanup Tests/
+    #- name: Pytest
+    #  continue-on-error: false
+    #  run: |
+    #    mkdir testresults
+    #    pip install pytest
+    #    pip install pytest-cov
+    #    pytest --cov=./ --cov-config=.coveragerc --cov-report term-missing Tests/unit_tests --junitxml=./testresults/test-results.xml
+    #    pip install pycmd
+    #    py.cleanup Tests/
    
     - uses: actions/checkout@v3
       with:
